--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: em(15px);
+  overflow-x: hidden;
 }
 
 @include for-normal-layout {
